--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,26 +6,24 @@
     android:layout_height="match_parent"
     android:background="@color/primary_background"
     tools:context=".features.profile.ProfileFragment">
-<<<<<<< HEAD
 
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonGoogle"
-        android:layout_width="325dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="524dp"
+        android:layout_width="324dp"
+        android:layout_height="43dp"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/pesquisa"
         android:text="Vincular sua conta Google"
         android:textColor="@color/black"
         app:cornerRadius="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/cvProfileConf"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+    </com.google.android.material.button.MaterialButton>
 
-        />
-=======
->>>>>>> 2d9e1a38b1d048786a10e74b6d2539da63ff5cec
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvProfileConf"
@@ -186,12 +184,8 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-<<<<<<< HEAD
-        app:rippleColor="#FBFBFB" />
-=======
+        app:rippleColor="#FBFBFB"
         app:layout_constraintStart_toStartOf="parent">
->>>>>>> 2d9e1a38b1d048786a10e74b6d2539da63ff5cec
-
     </com.google.android.material.button.MaterialButton>
 
     <TextView
@@ -218,21 +212,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonGoogle"
-        android:layout_width="324dp"
-        android:layout_height="43dp"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/pesquisa"
-        android:text="Vincular sua conta Google"
-        android:textColor="@color/black"
-        app:cornerRadius="15dp"
-        app:layout_constraintBottom_toTopOf="@id/cvProfileConf"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
 
-    </com.google.android.material.button.MaterialButton>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
